--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<p>here we go again</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Git file</title>
+</head>
+<body>
+    <hr>
+    <h1>Here we go again</h1>
+    <hr>
+</body>
+</html>
