--- a/Roadmap.html
+++ b/Roadmap.html
@@ -7,7 +7,10 @@
     <style>
         body {
             font-family: 'times new roman', sans-serif;
-            background-color: #dfd8d85b;
+            background-image: url('https://img.freepik.com/free-vector/infographic-timeline-concept-with-road_23-2147858392.jpg?w=740&t=st=1672616381~exp=1672616981~hmac=5134508f523476a160ec9802aa1c3d6b2142b75dc7e789456a51df32966613c0'); /* Path to your image */
+            background-size : cover; /* Ensures the image covers the entire page */
+            background-repeat: no-repeat; /* Prevents the image from repeating */
+            background-position:center center;
             color: #333;
             margin: 0;
             padding: 0;
@@ -18,7 +21,7 @@
         }
 
         .container {
-            background: #153ba56b;
+            background: #558108a3;
             border-radius: 8px;
             box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
             padding: 20px 30px;
@@ -28,7 +31,7 @@
         }
 
         h1 {
-            font-size: 24px;
+            font-size: 30px;
             margin-bottom: 20px;
             color: #0a0000d7;
         }
@@ -36,6 +39,7 @@
         .input-group {
             margin-bottom: 15px;
             text-align: left;
+            font-size: 24px;
         }
 
         label {
@@ -64,7 +68,7 @@
             padding: 10px 20px;
             font-size: 16px;
             cursor: pointer;
-            background-color: hsla(0, 0%, 0%, 0.665);
+            background-color: hsla(207, 90%, 33%, 0.865);
             color: #fff;
             border: none;
             border-radius: 4px;
