--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Git file</title>
+    <title>Document</title>
 </head>
 <body>
-    <hr>
-    <h1>Here we go again</h1>
-    <hr>
+    <h1>My page</h1>
+    <input type="text" name="Enter Marks" placeholder="Marks" required>
+    <button>Submit</button>
+    <script src="app4.js"></script>
 </body>
 </html>
